<resources>
    <string name="app_name">Diag Smart</string>
    <string name="dashboard">Dashboard</string>
    <string name="device">Device</string>
    <string name="system">System</string>
    <string name="cpu">CPU</string>
    <string name="battery">Battery</string>
    <string name="network">Network</string>
    <string name="connectivity">Connectivity</string>
    <string name="display">Display</string>
    <string name="memory">Memory</string>
    <string name="camera">Camera</string>
    <string name="thermal">Thermal</string>
    <string name="sensors">Sensors</string>
    <string name="apps">Apps</string>
    <string name="tests">Tests</string>
    <string name="dss_diag_android">DSS DIAG ANDROID</string>
    <string name="android_logo">Android Logo</string>
    <string name="diag_smart">DIAG SMART</string>
    <string name="cpu_status">CPU Status</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="imageview">imageView</string>
    <string name="all_apps">All Apps</string>
    <string name="tools">Tools</string>
    <string name="analyze">Analyze</string>
    <string name="export">Export</string>
    <string name="completed">Completed</string>
    <string name="current">Current :</string>
    <string name="power">Power :</string>
    <string name="health">Health</string>
    <string name="level">Level</string>
    <string name="status">Status</string>
    <string name="power_source">Power Source</string>
    <string name="technology">Technology</string>
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="time_to_charge">Time to charge</string>
    <string name="charge_cycles">Charge Cycles</string>
    <string name="capacity">Capacity</string>
    <string name="system_storage">System Storage</string>
    <string name="vendor">Vendor</string>
    <string name="type">Type</string>
    <string name="resolution">Resolution</string>
    <string name="maximum_range">Maximum Range</string>
    <string name="wakeup_sensor">Wakeup Sensor</string>
    <string name="dynamic_sensor">Dynamic Sensor</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="shake_your_device_did_you_feel_the_vibration">Shake your device. Did you feel the vibration?</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="charging">Charging</string>
    <string name="is_it_charging">Is it charging?</string>
    <string name="were_the_screen_one_solid_color">Were the screen one solid color?</string>
    <string name="next">Next</string>
    <string name="display_may_turn_black_white_red_green_and_blue_look_for_different_colored_pixels_and_tap_to_continue">Display may turn black, white, red, green and blue. Look for different colored pixels and tap to continue</string>
    <string name="ear_proximity">Ear Proximity</string>
    <string name="cover_the_area_above_the_display_or_place_your_palm_on_the_display_do_you_get_any_feedback">Cover the area above the display or place your palm on the display. Do you get any feedback?</string>
    <string name="ear_speaker">Ear Speaker</string>
    <string name="audio_is_playing_can_you_hear_it">Audio is playing. Can you hear it?</string>
    <string name="flashlight">Flashlight</string>
    <string name="is_the_flashlight_working">Is the flashlight working?</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="cover_the_area_above_the_display_is_the_value_changing">Cover the area above the display. Is the value changing?</string>
    <string name="loudspeaker">Loudspeaker</string>
    <string name="microphone">Microphone</string>
    <string name="speak_to_the_microphone_is_the_progress_changing">Speak to the microphone. Is the progress changing?</string>
    <string name="touches_detected_0">Touches Detected: 0</string>
    <string name="does_the_screen_detect_multiple_fingers">Does the screen detect multiple fingers?</string>
    <string name="volume_down_button">Volume Down Button</string>
    <string name="press_the_volume_down_key_do_you_get_any_feedback">Press the volume down key, do you get any feedback?</string>
    <string name="volume_up_button">Volume Up Button</string>
    <string name="press_the_volume_up_key_do_you_get_any_feedback">Press the volume up key, do you get any feedback?</string>
    <string name="automatic">Automatic</string>
    <string name="automatic_tests">Automatic Tests</string>
    <string name="interactive">Interactive</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_name">Device Name</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="board">Board</string>
    <string name="hardware">Hardware</string>
    <string name="brand">Brand</string>
    <string name="android_device_id">Android Device ID</string>
    <string name="build_fingerprint">Build Fingerprint</string>
    <string name="code_name">Code Name</string>
    <string name="api_level">API Level</string>
    <string name="released_with">Released With</string>
    <string name="security_patch_level">Security Patch Level</string>
    <string name="bootloader">Bootloader</string>
    <string name="build_number">Build number</string>
    <string name="baseband">Baseband</string>
    <string name="java_vm">Java VM</string>
    <string name="kernel">Kernel</string>
    <string name="language">Language</string>
    <string name="timezone">Timezone</string>
    <string name="opengl_es">OpenGL ES</string>
    <string name="root_management_apps">Root Management Apps</string>
    <string name="selinux">SELinux</string>
    <string name="google_play_services">Google Play Services</string>
    <string name="system_uptime">System Uptime</string>
    <string name="vulkan">Vulkan</string>
    <string name="treble">Treble</string>
    <string name="seamless_updates">Seamless Updates</string>
    <string name="dynamic_partitions">Dynamic Partitions</string>
    <string name="drm">DRM</string>
    <string name="version">Version</string>
    <string name="description">Description</string>
    <string name="algorithms">Algorithms</string>
    <string name="security_level">Security Level</string>
    <string name="max_hdcp_level">Max HDCP level</string>
    <string name="image_google_tensor">Image Google Tensor</string>
    <string name="google_tensor">Google Tensor</string>
    <string name="processor">Processor</string>
    <string name="cpu_architecture">CPU Architecture</string>
    <string name="supported_abis">Supported ABIs</string>
    <string name="cpu_hardware">CPU Hardware</string>
    <string name="cpu_type">CPU Type</string>
    <string name="cpu_governor">CPU Governor</string>
    <string name="cores">Cores</string>
    <string name="cpu_frequency">CPU Frequency</string>
    <string name="gpu_renderer">GPU Renderer</string>
    <string name="gpu_vendor">GPU Vendor</string>
    <string name="gpu_version">GPU Version</string>
    <string name="network_image">Network image</string>
    <string name="settings">Settings</string>
    <string name="public_ip">Public IP</string>
    <string name="ip_address">IP Address</string>
    <string name="ipv6_address">IPv6 Address</string>
    <string name="gateway">Gateway</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="dns_1">DNS 1</string>
    <string name="dns_2">DNS 2</string>
    <string name="lease_duration">Lease Duration</string>
    <string name="link_speed">Link Speed</string>
    <string name="frequency">Frequency</string>
    <string name="wifi_standard">Wifi Standard</string>
    <string name="security_type">Security Type</string>
    <string name="device_type">Device Type</string>
    <string name="network_interface">Network interface</string>
    <string name="built_in_display">Built-in display</string>
    <string name="image_display">Image Display</string>
    <string name="density">Density</string>
    <string name="font_scale">Font Scale</string>
    <string name="physical_size">Physical Size</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="hdr">HDR</string>
    <string name="hdr_capabilities">HDR Capabilities</string>
    <string name="brightness_level">Brightness Level</string>
    <string name="brightness_mode">Brightness Mode</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="orientation">Orientation</string>
    <string name="please_read_this">Please read this</string>
    <string name="if_the_megapixel_count_shown_is_wrong_that_means_your_device_manufacturer_has_limited_the_access_to_the_camera_for_third_party_apps_also_even_if_your_device_has_more_than_one_camera_on_one_side_android_os_identifies_them_as_a_single_camera_for_that_side">If the MegaPixel count shown is wrong, that means your device manufacturer has limited the access to the camera for third-party apps. Also even if your device has more than one camera on one side, Android OS identifies them as a single camera for that side.</string>
    <string name="aberration_modes">Aberration Modes</string>
    <string name="antibanding_modes">Antibanding Modes</string>
    <string name="auto_exposure_modes">Auto Exposure Modes</string>
    <string name="compensation_step">Compensation Step</string>
    <string name="autofocus_modes">Autofocus Modes</string>
    <string name="effects">Effects</string>
    <string name="scene_modes">Scene Modes</string>
    <string name="video_stabilization_modes">Video Stabilization Modes</string>
    <string name="auto_white_balance_modes">Auto White Balance Modes</string>
    <string name="maximum_auto_exposure_regions">Maximum Auto Exposure Regions</string>
    <string name="maximum_auto_focus_regions">Maximum Auto Focus Regions</string>
    <string name="maximum_auto_white_balance_regions">Maximum Auto White Balance Regions</string>
    <string name="edge_modes">Edge Modes</string>
    <string name="flash_available">Flash Available</string>
    <string name="hot_pixel_modes">Hot Pixel Modes</string>
    <string name="hardware_level">Hardware Level</string>
    <string name="thumbnail_sizes">Thumbnail Sizes</string>
    <string name="lens_placement">Lens Placement</string>
    <string name="apertures">Apertures</string>
    <string name="filter_densities">Filter Densities</string>
    <string name="focal_lengths">Focal Lengths</string>
    <string name="optical_stabilization">Optical Stabilization</string>
    <string name="focus_distance_calibration">Focus Distance Calibration</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="minimum_focus_distance">Minimum Focus Distance</string>
    <string name="camera_capabilities">Camera Capabilities</string>
    <string name="dynamic_range_profiles">Dynamic Range Profiles</string>
    <string name="maximum_output_streams">Maximum Output Streams</string>
    <string name="maximum_output_streams_stalling">Maximum Output Streams Stalling</string>
    <string name="partial_results">Partial Results</string>
    <string name="maximum_digital_zoom">Maximum Digital Zoom</string>
    <string name="cropping_type">Cropping Type</string>
    <string name="supported_resolutions">Supported Resolutions</string>
    <string name="test_pattern_modes">Test Pattern Modes</string>
    <string name="color_filter_arrangement">Color Filter Arrangement</string>
    <string name="sensor_size">Sensor Size</string>
    <string name="pixel_array_size">Pixel Array Size</string>
    <string name="timestamp_source">Timestamp Source</string>
    <string name="face_detection">Face detection</string>
    <string name="icono_tests">Icono tests</string>
    <string name="battery_icon">Battery icon</string>
    <string name="release_14">October 18, 2011</string>
    <string name="release_16">July 09, 2012</string>
</resources>