<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".tests.TestEarSpeakerFragment">

    <TextView
        android:id="@+id/tvEarSpeakerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_menu_textviews"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:text="@string/ear_speaker"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btEarSpeakerYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btEarSpeakerNo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btEarSpeakerNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="@+id/btEarSpeakerYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btEarSpeakerYes"
        app:layout_constraintTop_toTopOf="@+id/btEarSpeakerYes" />

    <TextView
        android:id="@+id/tvEarSpeakerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/audio_is_playing_can_you_hear_it"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btEarSpeakerYes"
        app:layout_constraintEnd_toEndOf="@+id/btEarSpeakerNo"
        app:layout_constraintStart_toStartOf="@+id/btEarSpeakerYes" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEarS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEarS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEarS3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/ivEarSpeaker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:contentDescription="@string/imageview"
        app:layout_constraintBottom_toTopOf="@+id/tvEarSpeakerText"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEarS2"
        app:layout_constraintStart_toStartOf="@+id/guidelineEarS1"
        app:layout_constraintTop_toTopOf="@+id/guidelineEarS3"
        app:srcCompat="@drawable/ear_speaker" />


</androidx.constraintlayout.widget.ConstraintLayout>